# layx

./: .gitignore  CMakeLists.txt  CSS_COMPATIBLE_API_PROPOSAL.md  FIX_TASK_DESC.md  IMPROVEMENTS.md  LAYX_CONTENT-BOXING.md  MASK_DESIGN.md  README.md  SHRINK_POLICY.md  debug_calc_order.c  debug_content_size  debug_content_size.c  debug_nested_scroll2.c  debug_rects  debug_rects.c  debug_scroll  debug_scroll.c  debug_scroll_tests  debug_scroll_tests.c  layout.c  layout.h  layx.c  layx.h  scroll_utils.c  scroll_utils.h  test_block_margin.c  test_defaults.c  test_destroy.c  test_display_types.c  test_flex_margin.c  test_hit_test.c  test_hit_test_simple.c  test_last_child_margin.c  test_last_child_margin_advanced.c  test_layout.c  test_layout_patterns.c  test_layx.c  test_margin_merge.c  test_multiple_layout_runs.c  test_scroll  (+4 more)
